objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>lastused2__c</fullName>
        <label>Last Used2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>2012</fullName>
                    <color>#FFFFFF</color>
                    <label>2012</label>
                </value>
                <value>
                    <fullName>2011</fullName>
                    <color>#FFFFFF</color>
                    <label>2011</label>
                </value>
                <value>
                    <fullName>2010</fullName>
                    <color>#FFFFFF</color>
                    <label>2010</label>
                </value>
                <value>
                    <fullName>2009</fullName>
                    <color>#FFFFFF</color>
                    <label>2009</label>
                </value>
                <value>
                    <fullName>2008</fullName>
                    <color>#FFFFFF</color>
                    <label>2008</label>
                </value>
                <value>
                    <fullName>2007</fullName>
                    <color>#FFFFFF</color>
                    <label>2007</label>
                </value>
                <value>
                    <fullName>2006</fullName>
                    <color>#FFFFFF</color>
                    <label>2006</label>
                </value>
                <value>
                    <fullName>2005</fullName>
                    <color>#FFFFFF</color>
                    <label>2005</label>
                </value>
                <value>
                    <fullName>2004</fullName>
                    <color>#FFFFFF</color>
                    <label>2004</label>
                </value>
                <value>
                    <fullName>2003</fullName>
                    <color>#FFFFFF</color>
                    <label>2003</label>
                </value>
                <value>
                    <fullName>2002</fullName>
                    <color>#FFFFFF</color>
                    <label>2002</label>
                </value>
                <value>
                    <fullName>2001</fullName>
                    <color>#FFFFFF</color>
                    <label>2001</label>
                </value>
                <value>
                    <fullName>2000</fullName>
                    <color>#FFFFFF</color>
                    <label>2000</label>
                </value>
                <value>
                    <fullName>1999</fullName>
                    <color>#FFFFFF</color>
                    <label>1999</label>
                </value>
                <value>
                    <fullName>1998</fullName>
                    <color>#FFFFFF</color>
                    <label>1998</label>
                </value>
                <value>
                    <fullName>1997</fullName>
                    <color>#FFFFFF</color>
                    <label>1997</label>
                </value>
                <value>
                    <fullName>1996</fullName>
                    <color>#FFFFFF</color>
                    <label>1996</label>
                </value>
                <value>
                    <fullName>1995</fullName>
                    <color>#FFFFFF</color>
                    <label>1995</label>
                </value>
                <value>
                    <fullName>1994</fullName>
                    <color>#FFFFFF</color>
                    <label>1994</label>
                </value>
                <value>
                    <fullName>1993</fullName>
                    <color>#FFFFFF</color>
                    <label>1993</label>
                </value>
                <value>
                    <fullName>1992</fullName>
                    <color>#FFFFFF</color>
                    <label>1992</label>
                </value>
                <value>
                    <fullName>1991</fullName>
                    <color>#FFFFFF</color>
                    <label>1991</label>
                </value>
                <value>
                    <fullName>1990</fullName>
                    <color>#FFFFFF</color>
                    <label>1990</label>
                </value>
                <value>
                    <fullName>1989</fullName>
                    <color>#FFFFFF</color>
                    <label>1989</label>
                </value>
                <value>
                    <fullName>1988</fullName>
                    <color>#FFFFFF</color>
                    <label>1988</label>
                </value>
                <value>
                    <fullName>1987</fullName>
                    <color>#FFFFFF</color>
                    <label>1987</label>
                </value>
                <value>
                    <fullName>1986</fullName>
                    <color>#FFFFFF</color>
                    <label>1986</label>
                </value>
                <value>
                    <fullName>1985</fullName>
                    <color>#FFFFFF</color>
                    <label>1985</label>
                </value>
                <value>
                    <fullName>1984</fullName>
                    <color>#FFFFFF</color>
                    <label>1984</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lastused3__c</fullName>
        <label>Last Used3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>2012</fullName>
                    <color>#FFFFFF</color>
                    <label>2012</label>
                </value>
                <value>
                    <fullName>2011</fullName>
                    <color>#FFFFFF</color>
                    <label>2011</label>
                </value>
                <value>
                    <fullName>2010</fullName>
                    <color>#FFFFFF</color>
                    <label>2010</label>
                </value>
                <value>
                    <fullName>2009</fullName>
                    <color>#FFFFFF</color>
                    <label>2009</label>
                </value>
                <value>
                    <fullName>2008</fullName>
                    <color>#FFFFFF</color>
                    <label>2008</label>
                </value>
                <value>
                    <fullName>2007</fullName>
                    <color>#FFFFFF</color>
                    <label>2007</label>
                </value>
                <value>
                    <fullName>2006</fullName>
                    <color>#FFFFFF</color>
                    <label>2006</label>
                </value>
                <value>
                    <fullName>2005</fullName>
                    <color>#FFFFFF</color>
                    <label>2005</label>
                </value>
                <value>
                    <fullName>2004</fullName>
                    <color>#FFFFFF</color>
                    <label>2004</label>
                </value>
                <value>
                    <fullName>2003</fullName>
                    <color>#FFFFFF</color>
                    <label>2003</label>
                </value>
                <value>
                    <fullName>2002</fullName>
                    <color>#FFFFFF</color>
                    <label>2002</label>
                </value>
                <value>
                    <fullName>2001</fullName>
                    <color>#FFFFFF</color>
                    <label>2001</label>
                </value>
                <value>
                    <fullName>2000</fullName>
                    <color>#FFFFFF</color>
                    <label>2000</label>
                </value>
                <value>
                    <fullName>1999</fullName>
                    <color>#FFFFFF</color>
                    <label>1999</label>
                </value>
                <value>
                    <fullName>1998</fullName>
                    <color>#FFFFFF</color>
                    <label>1998</label>
                </value>
                <value>
                    <fullName>1997</fullName>
                    <color>#FFFFFF</color>
                    <label>1997</label>
                </value>
                <value>
                    <fullName>1996</fullName>
                    <color>#FFFFFF</color>
                    <label>1996</label>
                </value>
                <value>
                    <fullName>1995</fullName>
                    <color>#FFFFFF</color>
                    <label>1995</label>
                </value>
                <value>
                    <fullName>1994</fullName>
                    <color>#FFFFFF</color>
                    <label>1994</label>
                </value>
                <value>
                    <fullName>1993</fullName>
                    <color>#FFFFFF</color>
                    <label>1993</label>
                </value>
                <value>
                    <fullName>1992</fullName>
                    <color>#FFFFFF</color>
                    <label>1992</label>
                </value>
                <value>
                    <fullName>1991</fullName>
                    <color>#FFFFFF</color>
                    <label>1991</label>
                </value>
                <value>
                    <fullName>1990</fullName>
                    <color>#FFFFFF</color>
                    <label>1990</label>
                </value>
                <value>
                    <fullName>1989</fullName>
                    <color>#FFFFFF</color>
                    <label>1989</label>
                </value>
                <value>
                    <fullName>1988</fullName>
                    <color>#FFFFFF</color>
                    <label>1988</label>
                </value>
                <value>
                    <fullName>1987</fullName>
                    <color>#FFFFFF</color>
                    <label>1987</label>
                </value>
                <value>
                    <fullName>1986</fullName>
                    <color>#FFFFFF</color>
                    <label>1986</label>
                </value>
                <value>
                    <fullName>1985</fullName>
                    <color>#FFFFFF</color>
                    <label>1985</label>
                </value>
                <value>
                    <fullName>1984</fullName>
                    <color>#FFFFFF</color>
                    <label>1984</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPA_Status__c</fullName>
        <label>CPA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_2__c</fullName>
        <label>Industry 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising &amp; Marketing</fullName>
                    <color>#FFFFFF</color>
                    <label>Advertising &amp; Marketing</label>
                </value>
                <value>
                    <fullName>Aerospace/Defense</fullName>
                    <color>#FFFFFF</color>
                    <label>Aerospace/Defense</label>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                    <color>#FFFFFF</color>
                    <label>Agriculture</label>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                    <color>#FFFFFF</color>
                    <label>Apparel</label>
                </value>
                <value>
                    <fullName>B2B Services</fullName>
                    <color>#FFFFFF</color>
                    <label>B2B Services</label>
                </value>
                <value>
                    <fullName>Banking</fullName>
                    <color>#FFFFFF</color>
                    <label>Banking</label>
                </value>
                <value>
                    <fullName>Biotechnology - Device &amp; Pharma</fullName>
                    <color>#FFFFFF</color>
                    <label>Biotechnology - Device &amp; Pharma</label>
                </value>
                <value>
                    <fullName>Casinos &amp; Gaming</fullName>
                    <color>#FFFFFF</color>
                    <label>Casinos &amp; Gaming</label>
                </value>
                <value>
                    <fullName>Construction &amp; Engineering</fullName>
                    <color>#FFFFFF</color>
                    <label>Construction &amp; Engineering</label>
                </value>
                <value>
                    <fullName>Consumer Products</fullName>
                    <color>#FFFFFF</color>
                    <label>Consumer Products</label>
                </value>
                <value>
                    <fullName>CPA Firm</fullName>
                    <color>#FFFFFF</color>
                    <label>CPA Firm</label>
                </value>
                <value>
                    <fullName>Education &amp; Training</fullName>
                    <color>#FFFFFF</color>
                    <label>Education &amp; Training</label>
                </value>
                <value>
                    <fullName>Education Services</fullName>
                    <color>#FFFFFF</color>
                    <label>Education Services</label>
                </value>
                <value>
                    <fullName>Energy - Utilities</fullName>
                    <color>#FFFFFF</color>
                    <label>Energy - Utilities</label>
                </value>
                <value>
                    <fullName>Entertainment Media</fullName>
                    <color>#FFFFFF</color>
                    <label>Entertainment Media</label>
                </value>
                <value>
                    <fullName>Financial Services &amp; Insurance</fullName>
                    <color>#FFFFFF</color>
                    <label>Financial Services &amp; Insurance</label>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                    <color>#FFFFFF</color>
                    <label>Grocery</label>
                </value>
                <value>
                    <fullName>Healthcare - Facilities</fullName>
                    <color>#FFFFFF</color>
                    <label>Healthcare - Facilities</label>
                </value>
                <value>
                    <fullName>Healthcare - Services/Insurance</fullName>
                    <color>#FFFFFF</color>
                    <label>Healthcare - Services/Insurance</label>
                </value>
                <value>
                    <fullName>Hospitality &amp; Tourism</fullName>
                    <color>#FFFFFF</color>
                    <label>Hospitality &amp; Tourism</label>
                </value>
                <value>
                    <fullName>Investment Bank</fullName>
                    <color>#FFFFFF</color>
                    <label>Investment Bank</label>
                </value>
                <value>
                    <fullName>Law Firm</fullName>
                    <color>#FFFFFF</color>
                    <label>Law Firm</label>
                </value>
                <value>
                    <fullName>Manufacturing - Consumer Products</fullName>
                    <color>#FFFFFF</color>
                    <label>Manufacturing - Consumer Products</label>
                </value>
                <value>
                    <fullName>Manufacturing - Industrial Products</fullName>
                    <color>#FFFFFF</color>
                    <label>Manufacturing - Industrial Products</label>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                    <color>#FFFFFF</color>
                    <label>Non-Profit</label>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                    <color>#FFFFFF</color>
                    <label>Oil &amp; Gas</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FFFFFF</color>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                    <color>#FFFFFF</color>
                    <label>Private Equity</label>
                </value>
                <value>
                    <fullName>Private Wealth Firm</fullName>
                    <color>#FFFFFF</color>
                    <label>Private Wealth Firm</label>
                </value>
                <value>
                    <fullName>Real Estate - Property Management</fullName>
                    <color>#FFFFFF</color>
                    <label>Real Estate - Property Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_3__c</fullName>
        <label>Industry 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising &amp; Marketing</fullName>
                    <color>#FFFFFF</color>
                    <label>Advertising &amp; Marketing</label>
                </value>
                <value>
                    <fullName>Aerospace/Defense</fullName>
                    <color>#FFFFFF</color>
                    <label>Aerospace/Defense</label>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                    <color>#FFFFFF</color>
                    <label>Agriculture</label>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                    <color>#FFFFFF</color>
                    <label>Apparel</label>
                </value>
                <value>
                    <fullName>B2B Services</fullName>
                    <color>#FFFFFF</color>
                    <label>B2B Services</label>
                </value>
                <value>
                    <fullName>Banking</fullName>
                    <color>#FFFFFF</color>
                    <label>Banking</label>
                </value>
                <value>
                    <fullName>Biotechnology - Device &amp; Pharma</fullName>
                    <color>#FFFFFF</color>
                    <label>Biotechnology - Device &amp; Pharma</label>
                </value>
                <value>
                    <fullName>Casinos &amp; Gaming</fullName>
                    <color>#FFFFFF</color>
                    <label>Casinos &amp; Gaming</label>
                </value>
                <value>
                    <fullName>Construction &amp; Engineering</fullName>
                    <color>#FFFFFF</color>
                    <label>Construction &amp; Engineering</label>
                </value>
                <value>
                    <fullName>Consumer Products</fullName>
                    <color>#FFFFFF</color>
                    <label>Consumer Products</label>
                </value>
                <value>
                    <fullName>CPA Firm</fullName>
                    <color>#FFFFFF</color>
                    <label>CPA Firm</label>
                </value>
                <value>
                    <fullName>Education &amp; Training</fullName>
                    <color>#FFFFFF</color>
                    <label>Education &amp; Training</label>
                </value>
                <value>
                    <fullName>Education Services</fullName>
                    <color>#FFFFFF</color>
                    <label>Education Services</label>
                </value>
                <value>
                    <fullName>Energy - Utilities</fullName>
                    <color>#FFFFFF</color>
                    <label>Energy - Utilities</label>
                </value>
                <value>
                    <fullName>Entertainment Media</fullName>
                    <color>#FFFFFF</color>
                    <label>Entertainment Media</label>
                </value>
                <value>
                    <fullName>Financial Services &amp; Insurance</fullName>
                    <color>#FFFFFF</color>
                    <label>Financial Services &amp; Insurance</label>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                    <color>#FFFFFF</color>
                    <label>Grocery</label>
                </value>
                <value>
                    <fullName>Healthcare - Facilities</fullName>
                    <color>#FFFFFF</color>
                    <label>Healthcare - Facilities</label>
                </value>
                <value>
                    <fullName>Healthcare - Services/Insurance</fullName>
                    <color>#FFFFFF</color>
                    <label>Healthcare - Services/Insurance</label>
                </value>
                <value>
                    <fullName>Hospitality &amp; Tourism</fullName>
                    <color>#FFFFFF</color>
                    <label>Hospitality &amp; Tourism</label>
                </value>
                <value>
                    <fullName>Investment Bank</fullName>
                    <color>#FFFFFF</color>
                    <label>Investment Bank</label>
                </value>
                <value>
                    <fullName>Law Firm</fullName>
                    <color>#FFFFFF</color>
                    <label>Law Firm</label>
                </value>
                <value>
                    <fullName>Manufacturing - Consumer Products</fullName>
                    <color>#FFFFFF</color>
                    <label>Manufacturing - Consumer Products</label>
                </value>
                <value>
                    <fullName>Manufacturing - Industrial Products</fullName>
                    <color>#FFFFFF</color>
                    <label>Manufacturing - Industrial Products</label>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                    <color>#FFFFFF</color>
                    <label>Non-Profit</label>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                    <color>#FFFFFF</color>
                    <label>Oil &amp; Gas</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FFFFFF</color>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                    <color>#FFFFFF</color>
                    <label>Private Equity</label>
                </value>
                <value>
                    <fullName>Private Wealth Firm</fullName>
                    <color>#FFFFFF</color>
                    <label>Private Wealth Firm</label>
                </value>
                <value>
                    <fullName>Real Estate - Property Management</fullName>
                    <color>#FFFFFF</color>
                    <label>Real Estate - Property Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBA_Alumni__c</fullName>
        <label>MBA Alumni</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MBA_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stanford</fullName>
                    <color>#FFFFFF</color>
                    <label>Stanford</label>
                </value>
                <value>
                    <fullName>Harvard</fullName>
                    <color>#FFFFFF</color>
                    <label>Harvard</label>
                </value>
                <value>
                    <fullName>Berkeley Haas</fullName>
                    <color>#FFFFFF</color>
                    <label>Berkeley Haas</label>
                </value>
                <value>
                    <fullName>Wharton</fullName>
                    <color>#FFFFFF</color>
                    <label>Wharton</label>
                </value>
                <value>
                    <fullName>Pepperdine</fullName>
                    <color>#FFFFFF</color>
                    <label>Pepperdine</label>
                </value>
                <value>
                    <fullName>USC Marshall</fullName>
                    <color>#FFFFFF</color>
                    <label>USC Marshall</label>
                </value>
                <value>
                    <fullName>UCLA Anderson</fullName>
                    <color>#FFFFFF</color>
                    <label>UCLA Anderson</label>
                </value>
                <value>
                    <fullName>MIT</fullName>
                    <color>#FFFFFF</color>
                    <label>MIT</label>
                </value>
                <value>
                    <fullName>Chicago University Booth</fullName>
                    <color>#FFFFFF</color>
                    <label>Chicago University Booth</label>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                    <color>#FFFFFF</color>
                    <label>Columbia</label>
                </value>
                <value>
                    <fullName>Northwestern Kellogg</fullName>
                    <color>#FFFFFF</color>
                    <label>Northwestern Kellogg</label>
                </value>
                <value>
                    <fullName>University of Michigan Ross</fullName>
                    <color>#FFFFFF</color>
                    <label>University of Michigan Ross</label>
                </value>
                <value>
                    <fullName>Yale</fullName>
                    <color>#FFFFFF</color>
                    <label>Yale</label>
                </value>
                <value>
                    <fullName>Duke Fuqua</fullName>
                    <color>#FFFFFF</color>
                    <label>Duke Fuqua</label>
                </value>
                <value>
                    <fullName>New York University Stern</fullName>
                    <color>#FFFFFF</color>
                    <label>New York University Stern</label>
                </value>
                <value>
                    <fullName>Texas University McCombs</fullName>
                    <color>#FFFFFF</color>
                    <label>Texas University McCombs</label>
                </value>
                <value>
                    <fullName>Boston University Questrom</fullName>
                    <color>#FFFFFF</color>
                    <label>Boston University Questrom</label>
                </value>
                <value>
                    <fullName>Carnegie Mellon Tepper</fullName>
                    <color>#FFFFFF</color>
                    <label>Carnegie Mellon Tepper</label>
                </value>
                <value>
                    <fullName>University of Indiana Bloomington</fullName>
                    <color>#FFFFFF</color>
                    <label>University of Indiana Bloomington</label>
                </value>
                <value>
                    <fullName>Cornell Johnson</fullName>
                    <color>#FFFFFF</color>
                    <label>Cornell Johnson</label>
                </value>
                <value>
                    <fullName>Dartmouth Tuck</fullName>
                    <color>#FFFFFF</color>
                    <label>Dartmouth Tuck</label>
                </value>
                <value>
                    <fullName>Virgina University Darden</fullName>
                    <color>#FFFFFF</color>
                    <label>Virgina University Darden</label>
                </value>
                <value>
                    <fullName>North Carolina University</fullName>
                    <color>#FFFFFF</color>
                    <label>North Carolina University</label>
                </value>
                <value>
                    <fullName>Vanderbilt University Owen</fullName>
                    <color>#FFFFFF</color>
                    <label>Vanderbilt University Owen</label>
                </value>
                <value>
                    <fullName>Illinois University</fullName>
                    <color>#FFFFFF</color>
                    <label>Illinois University</label>
                </value>
                <value>
                    <fullName>Minnesota University Carlson</fullName>
                    <color>#FFFFFF</color>
                    <label>Minnesota University Carlson</label>
                </value>
                <value>
                    <fullName>Michigan State</fullName>
                    <color>#FFFFFF</color>
                    <label>Michigan State</label>
                </value>
                <value>
                    <fullName>Georgetown McDonough</fullName>
                    <color>#FFFFFF</color>
                    <label>Georgetown McDonough</label>
                </value>
                <value>
                    <fullName>Washington University Foster</fullName>
                    <color>#FFFFFF</color>
                    <label>Washington University Foster</label>
                </value>
                <value>
                    <fullName>Texas A&amp;M</fullName>
                    <color>#FFFFFF</color>
                    <label>Texas A&amp;M</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBA_Status__c</fullName>
        <label>MBA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#FFFFFF</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FFFFFF</color>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>beducation__c</fullName>
        <label>Basic Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Bachelors Degree</fullName>
                    <color>#FFFFFF</color>
                    <label>Bachelors Degree</label>
                </value>
                <value>
                    <fullName>Associates Degree</fullName>
                    <color>#FFFFFF</color>
                    <label>Associates Degree</label>
                </value>
                <value>
                    <fullName>No Degree</fullName>
                    <color>#FFFFFF</color>
                    <label>No Degree</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>documentid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Id of the Inserted document.</description>
        <externalId>true</externalId>
        <label>Document Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>